chore: ignore large mp4 assets

--- a/public/index.html
+++ b/public/index.html
@@ -478,8 +478,54 @@
                         </div>
                     </div>
 
-                    <!-- Fourth Image - Arquitetura e Urbanismo -->
+                    <!-- Fourth Image - Agente de Atendimento -->
                     <div class="image-carousel-slide" data-slide="3">
+                        <div class="image-carousel-content">
+                            <div class="image-carousel-text">
+                                <h2 class="image-carousel-title">Agente de Atendimento</h2>
+                                <div class="carousel-checkpoints">
+                                    <div class="checkpoint-item">
+                                        <div class="checkpoint-dot" style="background-color: #AA5C2F;"></div>
+                                        <p class="checkpoint-text">Atendimento 24/7: suporte automatizado disponível a qualquer hora.</p>
+                                    </div>
+                                    <div class="checkpoint-item">
+                                        <div class="checkpoint-dot" style="background-color: #96B4A8;"></div>
+                                        <p class="checkpoint-text">Respostas inteligentes: IA treinada para entender e resolver demandas.</p>
+                                    </div>
+                                    <div class="checkpoint-item">
+                                        <div class="checkpoint-dot" style="background-color: #7CC1DF;"></div>
+                                        <p class="checkpoint-text">Integração multicanal: WhatsApp, chat e redes sociais unificados.</p>
+                                    </div>
+                                    <div class="checkpoint-item">
+                                        <div class="checkpoint-dot" style="background-color: #2C6ECB;"></div>
+                                        <p class="checkpoint-text">Escalabilidade sem limites: atenda milhares de clientes simultaneamente.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="image-carousel-image agente-video-container">
+                                <video 
+                                    src="assets/agente-atendimento-video.mp4" 
+                                    autoplay
+                                    muted 
+                                    playsinline 
+                                    webkit-playsinline
+                                    loop
+                                    preload="auto"
+                                    id="agente-video"
+                                >
+                                    Seu navegador não suporta vídeo HTML5.
+                                </video>
+                            </div>
+                            <div class="image-carousel-cta">
+                                <a href="/projeto-agente.html" class="image-carousel-button" data-testid="button-ver-projeto-agente">
+                                    Ver projeto
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Fifth Image - Arquitetura e Urbanismo -->
+                    <div class="image-carousel-slide" data-slide="4">
                         <div class="image-carousel-content">
                             <div class="image-carousel-text">
                                 <h2 class="image-carousel-title">Segmento de Arquitetura e Urbanismo</h2>
@@ -527,8 +573,8 @@
                         </div>
                     </div>
 
-                    <!-- Fifth Image - Engenharia -->
-                    <div class="image-carousel-slide" data-slide="4">
+                    <!-- Sixth Image - Engenharia -->
+                    <div class="image-carousel-slide" data-slide="5">
                         <div class="image-carousel-content">
                             <div class="image-carousel-text">
                                 <h2 class="image-carousel-title">Segmento de Engenharia</h2>
@@ -576,8 +622,8 @@
                         </div>
                     </div>
 
-                    <!-- Sixth Image - Lotes Imobiliários -->
-                    <div class="image-carousel-slide" data-slide="5">
+                    <!-- Seventh Image - Lotes Imobiliários -->
+                    <div class="image-carousel-slide" data-slide="6">
                         <div class="image-carousel-content">
                             <div class="image-carousel-text">
                                 <h2 class="image-carousel-title">Segmento de Lotes Imobiliários</h2>
@@ -635,6 +681,7 @@
                         <div class="image-carousel-dot" data-slide="3"></div>
                         <div class="image-carousel-dot" data-slide="4"></div>
                         <div class="image-carousel-dot" data-slide="5"></div>
+                        <div class="image-carousel-dot" data-slide="6"></div>
                     </div>
                     <div class="image-carousel-arrows">
                         <button class="image-carousel-arrow prev" id="image-prev">
